styles.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@500&display=swap');
@media (prefers-reduced-motion: no-preference) {
    * {
      scroll-behavior: smooth;
    }
  }

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    list-style: none;
    text-decoration: none;
    scroll-padding-top: 3.8rem; 
}

:root {
    --color1: rgb(30, 30, 30);
    --color2: rgb(165, 201, 202);
    --color3: rgb(255,255,255);
    --color4: rgb(255, 135, 178);
    --font-family1: 'Montserrat', sans-serif;
    --font-family2: 'Josefin Sans', sans-serif;
}

body {
    background-color: var(--color3);
}

/* navbar */
header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 0.6rem 8%;
    background-color: var(--color1);
    opacity: 0.99;
    position: fixed;
    width: 100%;
    font-family: var(--font-family1);
    z-index: 1;
}

header :is(li, a, button) {
    font-weight: 100;
    font-size: 1rem;
    color: white;
    text-decoration: none;
}

header button {
    font-family: var(--font-family1);
    padding: 0.75rem 1rem;
    background-color: rgb(165, 201, 202, 1);
    border: none;
    border-radius: 2.5rem;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    color: rgb(30, 30, 30);
}

header button:hover {
    background-color: rgb(165, 201, 202, 0.8);
}

#logo {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 2rem;
    background: -webkit-linear-gradient(125deg, var(--color3), var(--color4));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: bold;
    cursor: pointer;
    margin-right: auto;
}

.nav-links li {
    display: inline-block;
    padding: 0 1.25rem;
}

.nav-links li a {
    transition: all 0.3s ease 0s;
}

.nav-links li a:hover {
    color: var(--color2);
}


/* welcome page */
.section {
    width: 100%;
    height: 100vh;
}
#welcome-section{
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, 1fr));
    width: 100%;
    height: 100%;
    place-items: center;
    font-family: var(--font-family1);
}

#welcome-section img {
    max-width: 60rem;
}

#intro-message{
    padding: 0% 10% 0 0%;
}

#intro-message h1{
    letter-spacing: 0.4rem;
    color: var(--color2);
    font-size: 2rem;
}

.p1 {
    font-size: 1.4rem;
}

.p2 {
    font-size: 1rem;
}

#intro-message :is(h1, p){
    padding-bottom: 0.9rem;
    
}

#welcome-section button {
    font-family: var(--font-family1);
    padding: 0.75rem 1rem;
    border: none;
    border-radius: 2.5rem;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    background-color: var(--color4);
}

/* profile */
#profile {
    width: 100%;
    height: 100%;
    justify-items: center;
    display: flex;
    flex-direction: column;
    font-family: var(--font-family1);
    padding-bottom: 2rem;
    background-color: rgb(238, 242, 245);
}

#my-image {
    filter: grayscale(90%);
    width: 15%;
    display: block;
    margin: 2rem auto;
    border-radius: 50%;
    border: 0.3em solid var(--color1)
}

.profile-message {
    width: 50%;
    margin: 0 auto;
}

#profile h1 {
    letter-spacing: 0.4rem;
    color: var(--color4);
    font-size: 2rem;
    font-family: var(--font-family2);
    text-align: center;
}
#profile p {
    text-align: center;
    padding: 1rem 0;
    letter-spacing: 0.5px;
}

#profile span {
    font-weight: bold;
}

#profile p i {
    font-size: 1rem;
    font-family: 'times new roman', sans-serif;
    font-weight: light;
    text-align: justify;
}

.profile-message p:last-child span:last-child {
    float: right;
}





/* projects */

#projects {
    background-color: var(--color1);
    font-family: var(--font-family1);
    text-align: center;
}

#projects p{
    color: var(--color3);
    padding-top: 2rem;
}

.project-images {
    display: grid;
    grid-template-columns: repeat( auto-fit, minmax(320px, 1fr));
    width: 100%;
    margin: 0 auto;
    place-items: center;
    gap: 2rem;
    padding: 5% 10%;
    
}

.project-images img{
    width: 100%;
    object-fit: cover;
    filter: grayscale(60%);
}

.project-images img:hover{
    filter: grayscale(0%);
    transform: scale(1.01);
}

.project-title{
    font-weight: 100;
    font-size: 0.7rem;
    text-decoration: none;
    font-family: var(--font-family1);
    padding: 0.5rem 1rem;
    background-color: var(--color3);
    border: none;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    color: var(--color1);
    width: 100%;
    border-radius: 2%;
}

.project-title:hover{
    background-color: var(--color4);
    font-weight: bold;
}

/* CONNECT */
#connect-with-me-section{
    padding-top: 4rem;
    height: 80vh;
    text-align: center;
}

#connect-with-me-section h1 {
    letter-spacing: 0.4rem;
    color: var(--color2);
    font-size: 2rem;
    font-family: var(--font-family2);
    
}

#connect-with-me-section p {
    font-family: var(--font-family1);
    padding: 1rem;
}

.media-icons {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
    margin: 4rem;
    gap: 1rem;
}

.media-icons .button-wrapper{
    display: inline-block;
    transition: all 0.3s ease 0s;
    background-color: var(--color3);
    border: 0.1rem solid var(--color1);
    padding: 0.5rem;
}

.media-icons .button-wrapper:hover{
    transform: scale(1.1);
    background-color: var(--color4);
}

.media {
    text-decoration: none;
    color: inherit;
    
}

.media i {
    font-size: 3rem;

}



/*footer */
footer {
    background-color: var(--color1);
    color: var(--color3);
    text-align: center;
    font-family: var(--font-family1);
    padding: 1rem;
}

footer p {
    font-size: 0.7rem;
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    * {
        font-size: 1.1;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (max-width: 992px) {
    * {
        font-size: 0.9rem;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 768px) {
    * {
        font-size: 0.8rem;
    }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 600px) {
    * {
        font-size: 0.6rem;
    }
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 300px) {
    * {
        font-size: 0.5rem;
    }
}

